[tool.poetry]
name = "repl_python3_Onino-BOT"
version = "1.0.0 [Deployed]"
description = "A cute little Onion for your Discord server"
authors = ["c0nD"]

[tool.poetry.dependencies]
python = "^3.8"
discord = "^2.0.0"
Flask = "^2.2.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
